--- a/style.css
+++ b/style.css
@@ -1,13 +1,16 @@
-.container {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-}
-
 .card {
-    border: 2 px solid white;
+    border: 1px solid lightgray;
     border-radius: 10px;
     padding: 10px;
 }
+
+.container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+}
+
+
 
 .flex {
     display: flex;
