--- a/style.css
+++ b/style.css
@@ -10,8 +10,30 @@
     gap: 10px;
 }
 
+.left-blog {
+    background-color: black;
+    text-decoration: none;
+    float: left;
+    padding-right: 30px;
+    width: 25%;
+}
 
+li {
+    background-color: white;
+    list-style: none;
+    margin-top: 20px;
+    padding: 10px;
+    border-radius: 5px;
+    text-align: center;
+}
+
+li a {
+    text-decoration: none;
+    color: black;
+    font-weight: 600;
+}
 
 .flex {
     display: flex;
+    justify-content: space-around;
 }
