--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 body {
     font-family: 'Poppins', sans-serif;
-    margin: 0 auto;
 }
 
+/*Header section*/
 h1 {
     font-size: 50px;
     color: white;
@@ -14,11 +14,21 @@ h1 {
     justify-content: space-between;
 }
 
-.bg-color {
-    background-color: black;
+.flexible-display img {
+    width: 100%;
+    height: 100%;
+    margin-top: 30px;
 }
 
-.bg-color p {
+.top-banner {
+    background-color: black;
+    padding: 30px;
+    margin: 0 auto;
+    width: 87%;
+    border-radius: 15px;
+}
+
+.top-banner p {
     color: white;
     margin-bottom: 50px;
 }
@@ -33,6 +43,7 @@ h1 {
     font-size: 20px;
 }
 
+/*grid section*/
 .card {
     border: 1px solid lightgray;
     border-radius: 10px;
@@ -53,7 +64,10 @@ h1 {
     background-color: black;
     text-decoration: none;
     padding-right: 30px;
+    border-radius: 15px;
     width: 25%;
+    margin-bottom: 20px;
+    height: 60%;
 }
 
 li {
@@ -73,9 +87,43 @@ li a {
 
 .split {
     display: flex;
+    justify-content: space-between;
+    padding: 30px;
+    margin: 0 auto;
+    width: 90%;
+
+}
+
+/*Footer section*/
+footer {
+    background-color: black;
+    text-align: center;
+    padding: 50px;
+    margin: 0 auto;
+    width: 85%;
+    border-radius: 15px;
+}
+
+.footer-item {
+    font-size: 25px;
+    font-weight: 800;
+    color: white;
+}
+
+hr {
+    margin: 100px;
+}
+
+footer p {
+    color: white;
+}
+
+.footer-display {
+    display: flex;
     justify-content: space-around;
 }
 
+/*mobile view*/
 @media screen and (max-width:576px) {
     .flexible-display {
         flex-direction: column;
@@ -93,8 +141,13 @@ li a {
         grid-template-columns: repeat(1, 1fr);
     }
 
+    .footer-display {
+        flex-direction: column;
+    }
+
 }
 
+/*tablet view*/
 @media screen and (min-width:577px) and (max-width:992px) {
     .split {
         flex-direction: column;
@@ -114,6 +167,11 @@ li a {
         display: inline;
         border: 2px solid lightgray;
         margin-left: 20px;
+    }
+
+    .footer-display {
+        justify-content: space-evenly;
+        flex-wrap: wrap;
     }
 
 }
