--- a/style.css
+++ b/style.css
@@ -51,6 +51,7 @@ h1 {
     padding: 10px;
 }
 
+
 .flex {
     display: flex;
     justify-content: space-between;
@@ -81,7 +82,7 @@ li {
     list-style: none;
     margin-top: 20px;
     padding: 10px;
-    border-radius: 5px;
+    border-radius: 8px;
     text-align: center;
 }
 
@@ -89,6 +90,14 @@ li a {
     text-decoration: none;
     color: black;
     font-weight: 600;
+}
+
+li:nth-child(3) {
+    background: red;
+}
+
+li:nth-child(3) a {
+    color: white;
 }
 
 .split {
