--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ h1 {
     font-size: 20px;
 }
 
+
 /*grid section*/
 .card {
     border: 1px solid lightgray;
@@ -54,7 +55,6 @@ h1 {
 
 .flex {
     display: flex;
-    justify-content: space-between;
 }
 
 .card img {
@@ -65,6 +65,14 @@ h1 {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 10px;
+}
+
+.player-btn {
+    margin-top: 20px;
+    border: 1px solid black;
+    padding: 5px 15px;
+    border-radius: 10px;
+    font-size: 20px;
 }
 
 .left-blog {
@@ -109,6 +117,16 @@ li:nth-child(3) a {
 
 }
 
+.extra-btn {
+    background-color: #FF5050;
+    padding: 5px 25px;
+    margin-left: 40%;
+    margin-bottom: 5%;
+    border-radius: 5px;
+    color: white;
+    font-weight: 500px;
+    font-size: 20px;
+}
 
 /*Footer section*/
 footer {
@@ -174,6 +192,10 @@ footer p {
         flex-direction: column;
     }
 
+    .extra-btn {
+        display: none;
+    }
+
 }
 
 /*tablet view*/
@@ -205,4 +227,10 @@ footer p {
     }
 
 
+}
+
+@media screen and (min-width:993px) and (max-width:4000px) {
+    .extra-btn {
+        display: none;
+    }
 }
