--- a/style.css
+++ b/style.css
@@ -19,7 +19,13 @@ h1 {
     width: 100%;
     height: 100%;
     margin-top: 30px;
+    transition: transform 5s ease-in;
 }
+
+.flexible-display img:hover {
+    transform: translate(-100px);
+}
+
 
 .top-banner {
     background-color: black;
